@@ -33,6 +33,9 @@ bzr-svn 0.5.1					UNRELEASED
    * New cache that stores the most important metadata information used 
      when browsing history. 
 
+   * More efficient pull from Subversion branches, avoiding unnecessary 
+     calculation of revision numbers. (Requires InterBranch patch to bzr)
+
 bzr-svn 0.5.0					2009-02-03
 
   BUG FIXES
